Enable OpenStack HTTP metadata in cloud-init for the Amphora image

--- a/amphora-image-centos-arm64-docker/Dockerfile
+++ b/amphora-image-centos-arm64-docker/Dockerfile
@@ -5,4 +5,6 @@ RUN dnf -y install debootstrap python3 qemu-img sudo git yum-utils gdisk kpartx 
 RUN python3 -m pip install diskimage-builder
 
 WORKDIR /octavia/diskimage-create
+
+ENV DIB_CLOUD_INIT_DATASOURCES="ConfigDrive, OpenStack" 
 CMD ./diskimage-create.sh -a arm64 -i centos-minimal -s 3
