--- a/amphora-image-arm64-docker/Dockerfile.Centos
+++ b/amphora-image-arm64-docker/Dockerfile.Centos
@@ -6,5 +6,5 @@ RUN python3 -m pip install diskimage-builder
 
 WORKDIR /octavia/diskimage-create
 
-ENV DIB_CLOUD_INIT_DATASOURCES="ConfigDrive, OpenStack" 
+ENV CLOUD_INIT_DATASOURCES="ConfigDrive, OpenStack"
 CMD ./diskimage-create.sh -a arm64 -i centos-minimal -s 3
